// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParticipantRewardsCard Snapshop test for ParticipantRewardsCard with delivered reward 1`] = `
<button class="card-container p-2 w-full sm:w-1/2 md:w-1/3 lg:w-1/4">
  <div class="card border-2 rounded overflow-hidden border-green">
    <header class="card-header font-semibold">
      <!---->
      <!---->
      <!---->
      <div title="delivered" class="bg-primary text-white truncate capitalize p-4 w-full">
        delivered
      </div>
    </header>
    <div class="card-content p-0">
      <div class="card-image">
        <figure class="image is-4by3"><img src="https://S3-bucket.s3.amazonaws.com/prizes/picture" class="object-contain">
          <div class="play-icon"><svg viewBox="0 0 34 34" class="w-8 h-8 lg:w-10 lg:h-10 block">
              <path d="M17 33.8624C26.3888 33.8624 34 26.282 34 16.9312C34 7.58035 26.3888 0 17 0C7.61116 0 0 7.58035 0 16.9312C0 26.282 7.61116 33.8624 17 33.8624Z" fill="#384351" fill-opacity="0.866593"></path>
              <path d="M27.6301 16.587C28.027 16.8134 28.027 17.1839 27.6301 17.4103L12.0634 26.2911C11.6665 26.5175 11.3418 26.3323 11.3418 25.8794V8.11769C11.3418 7.66484 11.6665 7.47959 12.0634 7.70601L27.6301 16.587Z" fill="white"></path>
            </svg></div>
        </figure>
      </div>
    </div>
    <footer class="card-footer block bg-grey-lightest">
      <div class="text-center p-4">
        <h2 title="$15" class="capitalize truncate">
          $15
        </h2>
        <h3 class="font-semibold truncate">

        </h3>
      </div>
    </footer>
  </div>
</button>
`;

exports[`ParticipantRewardsCard Snapshop test for ParticipantRewardsCard with giveaway reward 1`] = `
<button class="card-container p-2 w-full sm:w-1/2 md:w-1/3 lg:w-1/4">
  <div class="card border-2 rounded overflow-hidden border-blue">
    <header class="card-header font-semibold">
      <!---->
      <!---->
      <div title="giveaway" class="bg-secondary text-white truncate capitalize p-4 w-full">
        giveaway
      </div>
      <!---->
    </header>
    <div class="card-content p-0">
      <div class="card-image">
        <figure class="image is-4by3"><img src="https://S3-bucket.s3.amazonaws.com/prizes/picture" class="object-contain">
          <div class="play-icon"><svg viewBox="0 0 34 34" class="w-8 h-8 lg:w-10 lg:h-10 block">
              <path d="M17 33.8624C26.3888 33.8624 34 26.282 34 16.9312C34 7.58035 26.3888 0 17 0C7.61116 0 0 7.58035 0 16.9312C0 26.282 7.61116 33.8624 17 33.8624Z" fill="#384351" fill-opacity="0.866593"></path>
              <path d="M27.6301 16.587C28.027 16.8134 28.027 17.1839 27.6301 17.4103L12.0634 26.2911C11.6665 26.5175 11.3418 26.3323 11.3418 25.8794V8.11769C11.3418 7.66484 11.6665 7.47959 12.0634 7.70601L27.6301 16.587Z" fill="white"></path>
            </svg></div>
        </figure>
      </div>
    </div>
    <footer class="card-footer block bg-grey-lightest">
      <div class="text-center p-4">
        <h2 title="$5" class="capitalize truncate">
          $5
        </h2>
        <h3 class="font-semibold truncate">

        </h3>
      </div>
    </footer>
  </div>
</button>
`;

exports[`ParticipantRewardsCard Snapshop test for ParticipantRewardsCard with pending reward 1`] = `
<button class="card-container p-2 w-full sm:w-1/2 md:w-1/3 lg:w-1/4">
  <div class="card border-2 rounded overflow-hidden border-orange">
    <header class="card-header font-semibold">
      <!---->
      <div title="pending" class="bg-orange text-white truncate capitalize p-4 w-full">
        pending
      </div>
      <!---->
      <!---->
    </header>
    <div class="card-content p-0">
      <div class="card-image">
        <figure class="image is-4by3"><img src="https://S3-bucket.s3.amazonaws.com/prizes/picture" class="object-contain">
          <div class="play-icon"><svg viewBox="0 0 34 34" class="w-8 h-8 lg:w-10 lg:h-10 block">
              <path d="M17 33.8624C26.3888 33.8624 34 26.282 34 16.9312C34 7.58035 26.3888 0 17 0C7.61116 0 0 7.58035 0 16.9312C0 26.282 7.61116 33.8624 17 33.8624Z" fill="#384351" fill-opacity="0.866593"></path>
              <path d="M27.6301 16.587C28.027 16.8134 28.027 17.1839 27.6301 17.4103L12.0634 26.2911C11.6665 26.5175 11.3418 26.3323 11.3418 25.8794V8.11769C11.3418 7.66484 11.6665 7.47959 12.0634 7.70601L27.6301 16.587Z" fill="white"></path>
            </svg></div>
        </figure>
      </div>
    </div>
    <footer class="card-footer block bg-grey-lightest">
      <div class="text-center p-4">
        <h2 title="$35" class="capitalize truncate">
          $35
        </h2>
        <h3 class="font-semibold truncate">

        </h3>
      </div>
    </footer>
  </div>
</button>
`;

exports[`ParticipantRewardsCard Snapshop test for ParticipantRewardsCard with unassigned reward 1`] = `
<button class="card-container p-2 w-full sm:w-1/2 md:w-1/3 lg:w-1/4">
  <div class="card border-2 rounded overflow-hidden border-red">
    <header class="card-header font-semibold">
      <div title="$0 modifier name more" class="bg-red text-white truncate capitalize p-4 w-full">
        $0
        <!----> more
      </div>
      <!---->
      <!---->
      <!---->
    </header>
    <div class="card-content p-0">
      <div class="card-image">
        <figure class="image is-4by3"><img src="https://S3-bucket.s3.amazonaws.com/prizes/picture" class="object-contain">
          <div class="play-icon"><svg viewBox="0 0 34 34" class="w-8 h-8 lg:w-10 lg:h-10 block">
              <path d="M17 33.8624C26.3888 33.8624 34 26.282 34 16.9312C34 7.58035 26.3888 0 17 0C7.61116 0 0 7.58035 0 16.9312C0 26.282 7.61116 33.8624 17 33.8624Z" fill="#384351" fill-opacity="0.866593"></path>
              <path d="M27.6301 16.587C28.027 16.8134 28.027 17.1839 27.6301 17.4103L12.0634 26.2911C11.6665 26.5175 11.3418 26.3323 11.3418 25.8794V8.11769C11.3418 7.66484 11.6665 7.47959 12.0634 7.70601L27.6301 16.587Z" fill="white"></path>
            </svg></div>
        </figure>
      </div>
    </div>
    <footer class="card-footer block bg-grey-lightest">
      <div class="text-center p-4">
        <h2 title="$25" class="capitalize truncate">
          $25
        </h2>
        <h3 class="font-semibold truncate">

        </h3>
      </div>
    </footer>
  </div>
</button>
`;
